# Test_StafIT

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
tests/: average_report_test.py  average_test.py  economic_one_line.csv  economic_test.csv  group_by_test.py  read_csv_test.py  sort_by_test.py
