[project]
name = "test-stafit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
  "-vv",				        # подробный вывод хода теста
  "--import-mode=importlib" , 	# меньше проблем с импортами
  "--cov=."
]